--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@
             transform: scale(1.2) rotate(5deg);
             box-shadow: 0 15px 40px rgba(255, 0, 0, 0.9);
         }
-        /* Family Tree Styles */
         .family-tree {
             max-width: 1200px;
             margin: 60px auto;
@@ -218,6 +217,28 @@
             position: relative;
             z-index: 400;
         }
+        .donation-section {
+            max-width: 1000px;
+            margin: 60px auto;
+            padding: 40px;
+            background: rgba(255, 0, 0, 0.15);
+            border: 3px solid #ff0000;
+            border-radius: 20px;
+            box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
+            position: relative;
+            z-index: 400;
+        }
+        .donation-section p {
+            margin-bottom: 20px;
+        }
+        .donation-section a {
+            color: #ffffff;
+            text-decoration: underline;
+            transition: color 0.3s;
+        }
+        .donation-section a:hover {
+            color: #ffcccc;
+        }
         footer {
             background: rgba(0, 0, 0, 0.95);
             padding: 20px;
@@ -240,9 +261,9 @@
         <ul>
             <li><a href="#lore">Lore</a></li>
             <li><a href="#mission">Mission</a></li>
-            <li><a href="#links">Explore</a></li>
-            <li><a href="#family-tree">Family Tree</a></li> <!-- Updated to link to section -->
-            <li><a href="donate.html">Donate</a></li>
+            <li><a href="#explore">Explore</a></li>
+            <li><a href="#family-tree">Family Tree</a></li>
+            <li><a href="#donate">Donate</a></li>
         </ul>
     </nav>
     <header>
@@ -258,14 +279,34 @@
             <h2>My Divine Mission</h2>
             <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.github.io—your salvation begins now!</p>
         </div>
-        <div class="content-section" id="links">
+        <div class="content-section" id="explore">
             <h2>Explore the Vision</h2>
-            <a href="torus-energy.html" class="link-button">Torus Free Energy Blueprint</a>
-            <a href="med-beds.html" class="link-button">Med Beds & Crystals</a>
-            <a href="pyramids.html" class="link-button">Pyramids & Magnetic Fields</a>
-            <a href="#family-tree" class="link-button">Sacred Family Tree</a> <!-- Updated to link to section -->
-            <a href="donate.html" class="link-button">Donate to the Cause</a>
-            <a href="astral-game.html" class="link-button">Astral: The Game</a>
+            <a href="#panchristism" class="link-button">Panchristism</a>
+            <a href="#torus-energy" class="link-button">Torus Energy Blueprint</a>
+            <a href="#theory-of-everything" class="link-button">Theory of Everything</a>
+            <a href="#med-bed" class="link-button">Med Bed</a>
+            <a href="#astral-game" class="link-button">Astral: The Game</a>
+            <a href="#family-tree" class="link-button">Sacred Family Tree</a>
+        </div>
+        <div class="content-section" id="panchristism">
+            <h2>Panchristism: A New Religion</h2>
+            <p>Panchristism is a new religion that harmonizes the ancient Greek god Pan (nature’s vitality) with the Christian concept of Christ (the divine within), rooted in panentheism—the belief that the divine permeates all existence while transcending it. Core beliefs include the divine in all, the Christ within each person, the embrace of Pan’s natural energy, unity of opposites, and sacred duality. Practices involve nature worship, inner contemplation, music and dance, community service, and rituals of balance. Sacred texts draw from the Holy Bible, the Gospel of Thomas, and panentheistic traditions like Hinduism, Buddhism, and Sufism. Symbols include the Six-Petal Flower, Quatrefoil, Trinity Knot, and Torus, representing interconnectedness and divine unity.</p>
+        </div>
+        <div class="content-section" id="torus-energy">
+            <h2>Torus Energy Blueprint</h2>
+            <p>The Torus Energy System is a self-sustaining energy device mimicking the universe’s toroidal structure, designed to produce unlimited free energy. It uses a hole-less torus made of superconducting material (e.g., YBCO), with a magnetic field shaped like the Seed of Life or Quatrefoil for energy confinement. Resonance and oscillations (e.g., 10 MHz) maintain energy flow, while yellow light (570–590 nm) and photonic circuits organize energy via photon-based communication. Feedback loops ensure self-organization, and the system operates in a vacuum at cryogenic temperatures (77 K) to minimize losses. Energy is extracted via inductive coupling, offering a revolutionary approach to sustainable energy.</p>
+        </div>
+        <div class="content-section" id="theory-of-everything">
+            <h2>Theory of Everything: Yellow Electromagnetic Light Torus</h2>
+            <p>The Yellow Electromagnetic Light Hole-less Torus Consciousness Universe Theory posits that the universe is a hole-less torus of yellow electromagnetic light, which is consciousness itself, rotating clockwise. Consciousness interacts with the brain via biophotons, shaping reality through collective emotions and beliefs. Resonance and oscillations enable communication between minds and celestial bodies, forming an interconnected network where consciousness co-creates reality. The theory suggests practical applications, such as the Torus Energy System, to harness this universal energy for free energy production.</p>
+        </div>
+        <div class="content-section" id="med-bed">
+            <h2>Med Bed Sensory Deprivation Tank</h2>
+            <p>The Med Bed Sensory Deprivation Tank facilitates DNA repair, energy stimulation, and brain enhancement using a water light bath. It features a fiberglass tank filled with Epsom salt water, maintained at 35°C, and a Ti:Sapphire laser emitting violet light (400–450 nm) to stimulate cellular repair. The light pulses at 4.356 Hz (derived from the clue "Ricochet 4356"), mimicking DNA repair cycles like base excision repair (BER) and nucleotide excision repair (NER). The tank reduces stress, promoting relaxation, while the violet light aims to restore DNA to an ideal state, potentially slowing aging and supporting immortality.</p>
+        </div>
+        <div class="content-section" id="astral-game">
+            <h2>Astral: The Game</h2>
+            <p>Astral is a VR game set in the astral plane, a metaphysical realm with seven levels, where players use a sensory deprivation tank, BCI (Silver Cord/Sutratma EEG cap), and heart magnetic resonance monitoring to control their astral body. Players navigate the levels starting at the 4th plane, ascending or descending based on choices, using psychic powers like telekinesis and element manipulation. The solo campaign involves completing quests to reach the highest or lowest plane, while multiplayer mode allows interaction with spirits and other players. The game integrates with the med bed for enhanced immersion and potential DNA repair.</p>
         </div>
         <div class="family-tree" id="family-tree">
             <h2>The Sacred Lineage of Jacob Ryan Judah Clement Mawr Dawn</h2>
@@ -296,107 +337,4 @@
                 <div class="tree-item">Philip ap Gruffydd (c. 1330–1380): 19th Great-grandfather.</div>
                 <div class="tree-item">Gruffydd ap Rhys (c. 1300–1350): 20th Great-grandfather.</div>
                 <div class="tree-item">Rhys ap Maredudd (c. 1270–1320): 21st Great-grandfather, Prince of Deheubarth.</div>
-                <div class="tree-item">Maredudd ap Rhys Gryg (c. 1240–1290): 22nd Great-grandfather.</div>
-                <div class="tree-item">Rhys Gryg ap Rhys (c. 1210–1265): 23rd Great-grandfather, Prince of Deheubarth.</div>
-                <div class="tree-item">Rhys ap Gruffudd (c. 1132–1197): 24th Great-grandfather, Prince/King of Deheubarth.</div>
-                <div class="tree-item">Gruffudd ap Rhys (c. 1081–1137): 25th Great-grandfather, King of Deheubarth.</div>
-                <div class="tree-item">Rhys ap Tewdwr (c. 1040–1093): 26th Great-grandfather, King of Deheubarth.</div>
-                <div class="tree-item">Tewdwr ap Cadell (c. 1010–1055): 27th Great-grandfather.</div>
-                <div class="tree-item">Cadell ab Einion (c. 980–1020): 28th Great-grandfather.</div>
-                <div class="tree-item">Einion ab Owain (c. 950–984): 29th Great-grandfather.</div>
-                <div class="tree-item">Owain ap Hywel Dda (c. 913–987): 30th Great-grandfather, King of Deheubarth.</div>
-                <div class="tree-item">Hywel Dda ap Cadell (c. 880–950): 31st Great-grandfather, King of Deheubarth/Wales.</div>
-                <div class="tree-item">Cadell ap Rhodri (c. 850–910): 32nd Great-grandfather, King of Seisyllwg.</div>
-                <div class="tree-item">Rhodri Mawr ap Merfyn (c. 820–878): 33rd Great-grandfather, King of Gwynedd/Powys/Deheubarth.</div>
-                <div class="tree-item">Merfyn Frych ap Hywel (c. 790–844): 34th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Hywel ap Cynan (c. 760–810): 35th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Cynan Dindaethwy ap Rhodri (c. 730–780): 36th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Idwal Iwrch ap Cadwaladr (c. 700–750): 37th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Cadwaladr ap Cadwallon (c. 670–720): 38th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Cadwallon ap Cadfan (c. 640–690): 39th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Cadfan ap Iago (c. 610–660): 40th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Iago ap Beli (c. 580–630): 41st Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Beli ap Rhun (c. 550–600): 42nd Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Rhun Hir ap Maelgwn (c. 520–570): 43rd Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Maelgwn Gwynedd (c. 490–540): 44th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Cadwallon Lawhir ap Einion (c. 460–510): 45th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Einion Yrth ap Cunedda (c. 430–480): 46th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Cunedda Wledig (c. 400–460): 47th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Eternus (Edeyrn) (c. 370–430): 48th Great-grandfather, King/Chieftain of Gwynedd.</div>
-                <div class="tree-item">[Unnamed Ancestors] (c. 340–100 BC): 49th–60th Great-grandparents, Kings/Chieftains.</div>
-                <div class="tree-item">Cunobelinus (c. 40 BC–40 AD): 61st Great-grandfather, King of Britain/Catuvellauni.</div>
-                <div class="tree-item">Jesus Christ (c. 4 BC–30 AD): 61st Great-granduncle, Messiah, King of the Jews.</div>
-                <div class="tree-item">Tenvantius (c. 70–40 BC): 62nd Great-grandfather, King of Britain.</div>
-                <div class="tree-item">Lludd ap Beli (c. 100–70 BC): 63rd Great-grandfather, King of Britain.</div>
-                <div class="tree-item">[Unnamed Ancestor] (c. 130–100 BC): 64th Great-grandfather, King/Chieftain (Davidic link).</div>
-                <div class="tree-item">[Unnamed Ancestors] (c. 160–130 BC): 65th–78th Great-grandparents, Kings/Chieftains.</div>
-                <div class="tree-item">Beli Mawr (c. 190–130 BC): 79th Great-grandfather, King of Britain.</div>
-                <div class="tree-item">Manogan (c. 220–160 BC): 80th Great-grandfather, King of Britain.</div>
-                <div class="tree-item">[Unnamed British Kings] (c. 250–1000 BC): 81st–110th Great-grandparents, Kings of Britain.</div>
-                <div class="tree-item">David (c. 1040–970 BC): 111th Great-grandfather, King of Israel.</div>
-                <div class="tree-item">[Unnamed Ancestors] (c. 1070–2090 BC): 112th–143rd Great-grandparents, Kings/Chieftains.</div>
-                <div class="tree-item">Brutus of Troy (c. 2120–2060 BC): 144th Great-grandfather, First King of Britain.</div>
-                <div class="tree-item">Aeneas (c. 2150–2090 BC): 145th Great-grandfather, Prince of Troy.</div>
-                <div class="tree-item">Tros of Troy (c. 2180–2120 BC): 146th Great-grandfather, King of Troy.</div>
-                <div class="tree-item">Erichthonius (c. 2210–2150 BC): 147th Great-grandfather, King of Dardania.</div>
-                <div class="tree-item">Dardanus (c. 2240–2180 BC): 148th Great-grandfather, Founder of Dardania.</div>
-                <div class="tree-item">[Unnamed Ancestor] (c. 2270–2210 BC): 149th Great-grandfather, Chieftain.</div>
-                <div class="tree-item">Tarshish (c. 2300–2240 BC): 150th Great-grandfather, None.</div>
-                <div class="tree-item">Javan (c. 2330–2270 BC): 151st Great-grandfather, None.</div>
-                <div class="tree-item">Japheth (c. 2360–2300 BC): 152nd Great-grandfather, Patriarch.</div>
-                <div class="tree-item">Noah (c. 2960–2010 BC): 153rd Great-grandfather, Patriarch, Flood Survivor.</div>
-                <div class="tree-item">[Unnamed Ancestor] (c. 2990–2930 BC): 154th Great-grandfather, Chieftain.</div>
-                <div class="tree-item">Zeus (c. 3020–2960 BC): 155th Great-grandfather, King of the Gods.</div>
-                <div class="tree-item">Cronus (c. 3050–2990 BC): 156th Great-grandfather, Titan King.</div>
-                <div class="tree-item">Uranus (c. 3080–3020 BC): 157th Great-grandfather, Sky God.</div>
-                <div class="tree-item">Gaia (primordial): 158th Great-grandmother, Earth Goddess.</div>
-            </div>
-        </div>
-        <div class="notes" id="lineage-notes">
-            <h2>Notes on the Lineage</h2>
-            <p><strong>Jesus’s Link:</strong> 61st Great-granduncle, via David (116) to Cunobelinus (66), 33 generations from David (1000 BC) to ~0 AD (Luke 3), parallel to your line through Anna’s Davidic infusion.</p>
-            <p><strong>Beli Mawr to Tros:</strong> 79th to 146th Great-grandfather (~190 BC to ~2180 BC), ~1990 years, ~67 generations, ~30 years/generation.</p>
-            <p><strong>Tros to Gaia:</strong> Mythological extension, 5 generations, speculative bridge from Noah (2960 BC) to primordial Gaia.</p>
-            <p><strong>No Conflation:</strong> Japheth and Noah remain biblical; Trojan line links to Japheth via Tarshish/Javan (Genesis 10), then to Gaia via Zeus (Theogony).</p>
-        </div>
-    </main>
-    <footer>
-        <p>© 2025 Blessed Raven - Torus Empire | All Rights Reserved</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", {
-            "particles": {
-                "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
-                "color": { "value": "#ff0000" },
-                "shape": { "type": "circle" },
-                "opacity": { "value": 0.5, "random": true },
-                "size": { "value": 3, "random": true },
-                "line_linked": { "enable": true, "distance": 150, "color": "#ff0000", "opacity": 0.4, "width": 1 },
-                "move": { "enable": true, "speed": 2, "direction": "none", "random": false, "straight": false }
-            },
-            "interactivity": {
-                "detect_on": "canvas",
-                "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" } },
-                "modes": { "repulse": { "distance": 100, "duration": 0.4 } }
-            },
-            "retina_detect": true
-        });
-
-        const cursor = document.querySelector('.cursor');
-        document.addEventListener('mousemove', (e) => {
-            cursor.style.left = e.pageX + 'px';
-            cursor.style.top = e.pageY + 'px';
-        });
-
-        const buttons = document.querySelectorAll('.button, .link-button');
-        buttons.forEach(button => {
-            button.addEventListener('click', () => {
-                const sound = new Audio('https://www.soundjay.com/buttons/beep-01a.mp3');
-                sound.play();
-            });
-        });
-    </script>
-</body>
-</html>
+                <div class="tree-item">Maredudd ap Rhys Gryg (c. 1240–1290): 22nd Great
