--- a/index.html
+++ b/index.html
@@ -205,18 +205,6 @@
             transform: scale(1.05);
             box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
         }
-        .notes {
-            max-width: 1000px;
-            margin: 40px auto;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.85);
-            border: 2px solid #ff0000;
-            border-radius: 15px;
-            color: #ffcccc;
-            font-size: 1.2em;
-            position: relative;
-            z-index: 400;
-        }
         .donation-section {
             max-width: 1000px;
             margin: 60px auto;
@@ -281,34 +269,14 @@
         </div>
         <div class="content-section" id="explore">
             <h2>Explore the Vision</h2>
-            <a href="#panchristism-section" class="link-button">Panchristism</a>
-            <a href="#torus-energy-section" class="link-button">Torus Energy Blueprint</a>
-            <a href="#theory-of-everything-section" class="link-button">Theory of Everything</a>
-            <a href="#med-bed-section" class="link-button">Med Bed</a>
-            <a href="#astral-game-section" class="link-button">Astral: The Game</a>
-            <a href="#family-tree-section" class="link-button">Sacred Family Tree</a>
+            <a href="panchristism.html" class="link-button">Panchristism</a>
+            <a href="torus-energy.html" class="link-button">Torus Energy Blueprint</a>
+            <a href="theory-of-everything.html" class="link-button">Theory of Everything</a>
+            <a href="med-bed.html" class="link-button">Med Bed</a>
+            <a href="astral.html" class="link-button">Astral: The Game</a>
+            <a href="family-tree.html" class="link-button">Sacred Family Tree</a>
         </div>
-        <div class="content-section" id="panchristism-section">
-            <h2>Panchristism: A New Religion</h2>
-            <p>Panchristism is a new religion created by Jacob Ryan Judah Clement Mawr Dawn that harmonizes the ancient Greek god Pan (nature’s vitality) with the Christian concept of Christ (the divine within), rooted in panentheism—the belief that the divine permeates all existence while transcending it. Core beliefs include the divine in all, the Christ within each person, the embrace of Pan’s natural energy, unity of opposites, and sacred duality. Practices involve nature worship through seasonal festivals, inner contemplation via meditation, music and dance inspired by Pan, community service, and rituals of balance. Sacred texts draw from the Holy Bible, the Gospel of Thomas, and panentheistic traditions like Hinduism (Upanishads), Buddhism (Avatamsaka Sutra), and Sufism (Rumi). Symbols include the Six-Petal Flower (Seed of Life), Quatrefoil, Trinity Knot, and Torus, representing interconnectedness and divine unity. Everywhere is sacred, with nature and personal altars as temples, and leadership focuses on internal work and divine visions.</p>
-        </div>
-        <div class="content-section" id="torus-energy-section">
-            <h2>Torus Energy Blueprint</h2>
-            <p>The Torus Energy System is a self-sustaining energy device designed to produce unlimited free energy by mimicking the universe’s toroidal structure. It features a hole-less torus made of superconducting material (e.g., YBCO), operating at 77 K in a vacuum chamber to minimize losses. A magnetic field, shaped like the Seed of Life or Quatrefoil, confines energy, while resonance at 10 MHz and oscillations maintain flow. Yellow light (570–590 nm) and photonic circuits enable photon-based communication, organizing energy flow. Feedback loops with sensors and a microcontroller ensure self-organization, and energy is extracted via inductive coupling. This system reflects the universe’s energy dynamics, offering a revolutionary approach to sustainable energy production.</p>
-        </div>
-        <div class="content-section" id="theory-of-everything-section">
-            <h2>Theory of Everything: Yellow Electromagnetic Light Torus</h2>
-            <p>The Yellow Electromagnetic Light Hole-less Torus Consciousness Universe Theory posits that the universe is a hole-less torus of yellow electromagnetic light, which is consciousness itself, rotating clockwise. Consciousness interacts with the brain via biophotons, shaping reality through collective emotions and beliefs. Resonance and oscillations enable communication between minds and celestial bodies, forming an interconnected network where consciousness co-creates reality. The torus ensures continuous energy flow, maintaining balance, and the theory suggests practical applications like the Torus Energy System for free energy. This framework integrates consciousness, cosmology, and energy dynamics into a unified model of existence.</p>
-        </div>
-        <div class="content-section" id="med-bed-section">
-            <h2>Med Bed Sensory Deprivation Tank</h2>
-            <p>The Med Bed Sensory Deprivation Tank is designed to facilitate DNA repair, energy stimulation, and brain enhancement using a water light bath. It features a fiberglass tank filled with Epsom salt water at 35°C, equipped with a Ti:Sapphire laser emitting violet light (400–450 nm) pulsed at 4.356 Hz (derived from "Ricochet 4356"). The light stimulates cellular repair processes like base excision repair (BER) and nucleotide excision repair (NER), aiming to restore DNA to an ideal state (potentially the 64 codons). The tank reduces stress, promoting relaxation, and may support immortality by slowing aging through enhanced DNA repair and cellular energy.</p>
-        </div>
-        <div class="content-section" id="astral-game-section">
-            <h2>Astral: The Game</h2>
-            <p>Astral is a VR game set in the astral plane, a metaphysical realm with seven levels, where players use a sensory deprivation tank, BCI (Silver Cord/Sutratma EEG cap with dry foam sensors), and heart magnetic resonance monitoring to control their astral body. Starting at the 4th plane, players ascend or descend based on choices, using psychic powers like telekinesis and element manipulation. The solo campaign involves completing quests to reach the highest or lowest plane, while multiplayer mode allows interaction with spirits and other players. The game integrates with the med bed for enhanced immersion, relaxation, and potential DNA repair, dynamically responding to brainwaves and heart signals.</p>
-        </div>
-        <div class="family-tree" id="family-tree-section">
+        <div class="family-tree" id="family-tree">
             <h2>The Sacred Lineage of Jacob Ryan Judah Clement Mawr Dawn</h2>
             <div class="tree-list">
                 <div class="tree-item">Jacob (b. 1995): Self.</div>
@@ -362,58 +330,4 @@
                 <div class="tree-item">Meirchion Gul (c. 490–550): 44th Great-grandfather, King of Rheged.</div>
                 <div class="tree-item">Gwrwst Ledlwm (c. 460–520): 45th Great-grandfather.</div>
                 <div class="tree-item">Ceneu ap Coel (c. 430–490): 46th Great-grandfather.</div>
-                <div class="tree-item">Coel Hen (c. 400–460): 47th Great-grandfather, High King of Northern Britain.</div>
-                <div class="tree-item">Tehvant (c. 370–430): 48th Great-grandfather.</div>
-                <div class="tree-item">Urban (c. 340–400): 49th Great-grandfather.</div>
-                <div class="tree-item">Grat (c. 310–370): 50th Great-grandfather.</div>
-                <div class="tree-item">Iago (c. 280–340): 51st Great-grandfather.</div>
-                <div class="tree-item">Cai (c. 250–310): 52nd Great-grandfather.</div>
-                <div class="tree-item">Tanco (c. 220–280): 53rd Great-grandfather.</div>
-                <div class="tree-item">Telpwll (c. 190–250): 54th Great-grandfather.</div>
-                <div class="tree-item">Meirchion (c. 160–220): 55th Great-grandfather.</div>
-                <div class="tree-item">Gwrddwfn (c. 130–190): 56th Great-grandfather.</div>
-                <div class="tree-item">Gwrst (c. 100–160): 57th Great-grandfather.</div>
-                <div class="tree-item">Mor (c. 70–130): 58th Great-grandfather.</div>
-                <div class="tree-item">Ceri (c. 40–100): 59th Great-grandfather.</div>
-                <div class="tree-item">Caed (c. 10–70): 60th Great-grandfather.</div>
-                <div class="tree-item">Cynfelyn (c. 20 BCE–40 CE): 61st Great-grandfather.</div>
-                <div class="tree-item">Cynan (c. 50–20 BCE): 62nd Great-grandfather.</div>
-                <div class="tree-item">Caswallon (c. 80–50 BCE): 63rd Great-grandfather.</div>
-                <div class="tree-item">Beli Mawr (c. 110–80 BCE): 64th Great-grandfather, King of the Britons.</div>
-                <div class="tree-item">Manogan ap Eneid (c. 140–110 BCE): 65th Great-grandfather.</div>
-                <div class="tree-item">Eneid ap Cerwyd (c. 170–140 BCE): 66th Great-grandfather.</div>
-                <div class="tree-item">Cerwyd (c. 200–170 BCE): 67th Great-grandfather.</div>
-                <div class="tree-item">Crydon (c. 230–200 BCE): 68th Great-grandfather.</div>
-                <div class="tree-item">Cynedda (c. 260–230 BCE): 69th Great-grandfather.</div>
-                <div class="tree-item">Cynan (c. 290–260 BCE): 70th Great-grandfather.</div>
-                <div class="tree-item">Cynfarch (c. 320–290 BCE): 71st Great-grandfather.</div>
-                <div class="tree-item">Prydain (c. 350–320 BCE): 72nd Great-grandfather.</div>
-                <div class="tree-item">Aedd Mawr (c. 380–350 BCE): 73rd Great-grandfather.</div>
-                <div class="tree-item">Antonius (c. 410–380 BCE): 74th Great-grandfather.</div>
-                <div class="tree-item">Sisillius (c. 440–410 BCE): 75th Great-grandfather.</div>
-                <div class="tree-item">Bledudo (c. 470–440 BCE): 76th Great-grandfather.</div>
-                <div class="tree-item">Rhydderch (c. 500–470 BCE): 77th Great-grandfather.</div>
-                <div class="tree-item">Iago (c. 530–500 BCE): 78th Great-grandfather.</div>
-                <div class="tree-item">Gwrgan (c. 560–530 BCE): 79th Great-grandfather.</div>
-                <div class="tree-item">Merfyn (c. 590–560 BCE): 80th Great-grandfather.</div>
-                <div class="tree-item">Diffun (c. 620–590 BCE): 81st Great-grandfather.</div>
-                <div class="tree-item">Owain (c. 650–620 BCE): 82nd Great-grandfather.</div>
-                <div class="tree-item">Bran (c. 680–650 BCE): 83rd Great-grandfather.</div>
-                <div class="tree-item">Beli (c. 710–680 BCE): 84th Great-grandfather.</div>
-                <div class="tree-item">Capoir (c. 740–710 BCE): 85th Great-grandfather.</div>
-                <div class="tree-item">Digueillus (c. 770–740 BCE): 86th Great-grandfather.</div>
-                <div class="tree-item">Heli (c. 800–770 BCE): 87th Great-grandfather.</div>
-                <div class="tree-item">Lud (c. 830–800 BCE): 88th Great-grandfather.</div>
-                <div class="tree-item">Beli (c. 860–830 BCE): 89th Great-grandfather.</div>
-                <div class="tree-item">Gurgustius (c. 890–860 BCE): 90th Great-grandfather.</div>
-                <div class="tree-item">Sisillius (c. 920–890 BCE): 91st Great-grandfather.</div>
-                <div class="tree-item">Iago (c. 950–920 BCE): 92nd Great-grandfather.</div>
-                <div class="tree-item">Kimarcus (c. 980–950 BCE): 93rd Great-grandfather.</div>
-                <div class="tree-item">Gorboduc (c. 1010–980 BCE): 94th Great-grandfather.</div>
-                <div class="tree-item">Dyfnwal (c. 1040–1010 BCE): 95th Great-grandfather.</div>
-                <div class="tree-item">Cunedda (c. 1070–1040 BCE): 96th Great-grandfather.</div>
-                <div class="tree-item">Rhiwallon (c. 1100–1070 BCE): 97th Great-grandfather.</div>
-                <div class="tree-item">Gwrddwfn (c. 1130–1100 BCE): 98th Great-grandfather.</div>
-                <div class="tree-item">Einudd (c. 1160–1130 BCE): 99th Great-grandfather.</div>
-                <div class="tree-item">Eudaf (c. 1190–1160 BCE): 100th Great-grandfather.</div>
-                <div class="
+                <div class="tree-item">Coel Hen (c. 400–460): 47th Great-grandfather, High King of Northern Britain.</
