--- a/index.html
+++ b/index.html
@@ -172,61 +172,6 @@
             transform: scale(1.2) rotate(5deg);
             box-shadow: 0 15px 40px rgba(255, 0, 0, 0.9);
         }
-        .family-tree {
-            max-width: 1200px;
-            margin: 60px auto;
-            padding: 40px;
-            background: rgba(0, 0, 0, 0.85);
-            border: 3px solid #ff0000;
-            border-radius: 20px;
-            box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
-            position: relative;
-            z-index: 400;
-            min-height: 600px;
-        }
-        .tree-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            text-align: left;
-            min-height: 400px;
-        }
-        .tree-item {
-            background: rgba(255, 0, 0, 0.2);
-            padding: 15px;
-            border: 1px solid #ff0000;
-            border-radius: 10px;
-            color: #ffffff;
-            font-size: 1.1em;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .tree-item:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
-        }
-        .donation-section {
-            max-width: 1000px;
-            margin: 60px auto;
-            padding: 40px;
-            background: rgba(255, 0, 0, 0.15);
-            border: 3px solid #ff0000;
-            border-radius: 20px;
-            box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
-            position: relative;
-            z-index: 400;
-        }
-        .donation-section p {
-            margin-bottom: 20px;
-        }
-        .donation-section a {
-            color: #ffffff;
-            text-decoration: underline;
-            transition: color 0.3s;
-        }
-        .donation-section a:hover {
-            color: #ffcccc;
-        }
         footer {
             background: rgba(0, 0, 0, 0.95);
             padding: 20px;
@@ -247,11 +192,12 @@
     <div class="cursor"></div>
     <nav>
         <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#lore">Lore</a></li>
             <li><a href="#mission">Mission</a></li>
             <li><a href="#explore">Explore</a></li>
-            <li><a href="#family-tree">Family Tree</a></li>
-            <li><a href="#donate">Donate</a></li>
+            <li><a href="family-tree.html">Family Tree</a></li>
+            <li><a href="donate.html">Donate</a></li>
         </ul>
     </nav>
     <header>
@@ -272,62 +218,42 @@
             <a href="panchristism.html" class="link-button">Panchristism</a>
             <a href="torus-energy.html" class="link-button">Torus Energy Blueprint</a>
             <a href="theory-of-everything.html" class="link-button">Theory of Everything</a>
-            <a href="med-bed.html" class="link-button">Med Bed</a>
-            <a href="astral.html" class="link-button">Astral: The Game</a>
+            <a href="med-beds.html" class="link-button">Med Bed</a>
+            <a href="astral-game.html" class="link-button">Astral: The Game</a>
             <a href="family-tree.html" class="link-button">Sacred Family Tree</a>
+            <a href="pyramids.html" class="link-button">Pyramids</a>
         </div>
-        <div class="family-tree" id="family-tree">
-            <h2>The Sacred Lineage of Jacob Ryan Judah Clement Mawr Dawn</h2>
-            <div class="tree-list">
-                <div class="tree-item">Jacob (b. 1995): Self.</div>
-                <div class="tree-item">Sharon Martin (~1965): Mother.</div>
-                <div class="tree-item">Valerie Watts (1933–2005): Grandmother.</div>
-                <div class="tree-item">Laurence Watts (1912–1992): Grandfather.</div>
-                <div class="tree-item">Arthur Watts (1883–1935): Great-grandfather.</div>
-                <div class="tree-item">Walter Watts (1844–1928): 2nd Great-grandfather.</div>
-                <div class="tree-item">William Watts (1814–1881): 3rd Great-grandfather.</div>
-                <div class="tree-item">Joseph Watts (1784–1852): 4th Great-grandfather.</div>
-                <div class="tree-item">Edward Watts (1744–1829): 5th Great-grandfather.</div>
-                <div class="tree-item">Edward Watts (1708–1785): 6th Great-grandfather.</div>
-                <div class="tree-item">John Edward Watts (1660–1725): 7th Great-grandfather.</div>
-                <div class="tree-item">Joseph Edward Cornelius Watts (1629–1668): 8th Great-grandfather.</div>
-                <div class="tree-item">Edward Watts (1592–1684): 9th Great-grandfather.</div>
-                <div class="tree-item">John Walter Watts (1570–1652): 10th Great-grandfather.</div>
-                <div class="tree-item">Jane R. Harrington (1572–1621): 10th Great-grandmother.</div>
-                <div class="tree-item">Sir Henry Harrington (1541–1612): 11th Great-grandfather, Knight.</div>
-                <div class="tree-item">Lucy Sidney (1520–1591): 12th Great-grandmother, Lady.</div>
-                <div class="tree-item">Anne Pakenham (1490–1544): 13th Great-grandmother.</div>
-                <div class="tree-item">Anne Clement (1465–1510): 14th Great-grandmother.</div>
-                <div class="tree-item">John William Nicolas Clement Sr. (1439–1489): 15th Great-grandfather.</div>
-                <div class="tree-item">Mabel ferch Gruffud (1421–1485): 16th Great-grandmother.</div>
-                <div class="tree-item">Gruffydd ap Nicolas (1393–1461): 17th Great-grandfather, Lord of Dinefwr.</div>
-                <div class="tree-item">Nicolas ap Philip (c. 1360–1393): 18th Great-grandfather.</div>
-                <div class="tree-item">Philip ap Gruffydd (c. 1330–1380): 19th Great-grandfather.</div>
-                <div class="tree-item">Gruffydd ap Rhys (c. 1300–1350): 20th Great-grandfather.</div>
-                <div class="tree-item">Rhys ap Maredudd (c. 1270–1320): 21st Great-grandfather, Prince of Deheubarth.</div>
-                <div class="tree-item">Maredudd ap Rhys Gryg (c. 1240–1290): 22nd Great-grandfather.</div>
-                <div class="tree-item">Rhys Gryg (c. 1210–1260): 23rd Great-grandfather, Lord of Deheubarth.</div>
-                <div class="tree-item">Rhys ap Gruffydd (c. 1180–1234): 24th Great-grandfather, Prince of Deheubarth.</div>
-                <div class="tree-item">Gruffydd ap Rhys (c. 1150–1201): 25th Great-grandfather.</div>
-                <div class="tree-item">Rhys ap Tewdwr (c. 1020–1093): 26th Great-grandfather, King of Deheubarth.</div>
-                <div class="tree-item">Tewdwr ap Cadell (c. 990–1050): 27th Great-grandfather.</div>
-                <div class="tree-item">Cadell ap Einion (c. 960–1010): 28th Great-grandfather.</div>
-                <div class="tree-item">Einion ap Owain (c. 930–984): 29th Great-grandfather.</div>
-                <div class="tree-item">Owain ap Hywel Dda (c. 900–950): 30th Great-grandfather.</div>
-                <div class="tree-item">Hywel Dda (c. 880–950): 31st Great-grandfather, King of the Britons.</div>
-                <div class="tree-item">Cadell ap Rhodri (c. 850–910): 32nd Great-grandfather.</div>
-                <div class="tree-item">Rhodri Mawr (c. 820–878): 33rd Great-grandfather, King of Gwynedd, Powys, and Deheubarth.</div>
-                <div class="tree-item">Merfyn Frych (c. 790–844): 34th Great-grandfather, King of Gwynedd.</div>
-                <div class="tree-item">Gwriad ap Elidyr (c. 760–825): 35th Great-grandfather.</div>
-                <div class="tree-item">Elidyr ap Sandde (c. 730–790): 36th Great-grandfather.</div>
-                <div class="tree-item">Sandde ap Alcwn (c. 700–760): 37th Great-grandfather.</div>
-                <div class="tree-item">Alcwn ap Tegid (c. 670–730): 38th Great-grandfather.</div>
-                <div class="tree-item">Tegid ap Gwyar (c. 640–700): 39th Great-grandfather.</div>
-                <div class="tree-item">Gwyar ap Dwywg (c. 610–670): 40th Great-grandfather.</div>
-                <div class="tree-item">Dwywg ap Llywarch (c. 580–640): 41st Great-grandfather.</div>
-                <div class="tree-item">Llywarch Hen (c. 550–610): 42nd Great-grandfather, King of Rheged.</div>
-                <div class="tree-item">Elidyr Llydanwyn (c. 520–580): 43rd Great-grandfather.</div>
-                <div class="tree-item">Meirchion Gul (c. 490–550): 44th Great-grandfather, King of Rheged.</div>
-                <div class="tree-item">Gwrwst Ledlwm (c. 460–520): 45th Great-grandfather.</div>
-                <div class="tree-item">Ceneu ap Coel (c. 430–490): 46th Great-grandfather.</div>
-                <div class="tree-item">Coel Hen (c. 400–460): 47th Great-grandfather, High King of Northern Britain.</
+    </main>
+    <footer>
+        <p>&copy; 2025 Blessed Raven. All rights reserved.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+        particlesJS("particles-js", {
+            "particles": {
+                "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+                "color": { "value": "#ff0000" },
+                "shape": { "type": "circle" },
+                "opacity": { "value": 0.5, "random": true },
+                "size": { "value": 3, "random": true },
+                "line_linked": { "enable": true, "distance": 150, "color": "#ff0000", "opacity": 0.4, "width": 1 },
+                "move": { "enable": true, "speed": 2, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
+            },
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
+                "modes": { "repulse": { "distance": 100, "duration": 0.4 }, "push": { "particles_nb": 4 } }
+            },
+            "retina_detect": true
+        });
+
+        const cursor = document.querySelector('.cursor');
+        document.addEventListener('mousemove', e => {
+            cursor.style.left = e.clientX + 'px';
+            cursor.style.top = e.clientY + 'px';
+        });
+        document.addEventListener('mousedown', () => cursor.style.transform = 'scale(1.5)');
+        document.addEventListener('mouseup', () => cursor.style.transform = 'scale(1)');
+    </script>
+</body>
+</html>
