--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#lore">Lore</a></li>
-            <li><a href="#mission">Mission</a></li>
-            <li><a href="#explore">Explore</a></li>
+            <li><a href="index.html#lore">Lore</a></li>
+            <li><a href="index.html#mission">Mission</a></li>
+            <li><a href="index.html#explore">Explore</a></li>
             <li><a href="family-tree.html">Family Tree</a></li>
             <li><a href="donate.html">Donate</a></li>
         </ul>
@@ -225,7 +225,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 Blessed Raven. All rights reserved.</p>
+        <p>© 2025 Blessed Raven. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
